--- a/application.yml
+++ b/application.yml
@@ -21,7 +21,7 @@ security:
   oauth2:
     resource:
       user-info-uri: http://auth-service:5000/uaa/users/current
-
+      filter-order : 3
     
 spring:
   rabbitmq:
