updated log level

--- a/account-service.yml
+++ b/account-service.yml
@@ -20,6 +20,6 @@ server:
   context-path: /accounts
   port: 6000
 
-logging:
-  level:
-    org.springframework.security: DEBUG
+#logging:
+#  level:
+#    org.springframework.security: DEBUG
